fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ p{
    
 .row .col-4{
     height: 100%;
-    width: calc(80% / 12 * 4 );
+    width: calc(95% / 12 * 4 );
 }
 .row .col-12{
     width: 100%;
